--- a/templates/login_unified.html
+++ b/templates/login_unified.html
@@ -44,7 +44,7 @@
         </div>
 
         <div>
-          <label class="block text-sm text-slate-700 mb-1">E-mail</label>
+          <label class="block text-sm text-slate-700 mb-1">Login</label>
           <input name="email" type="text" required class="w-full rounded-lg border-slate-300 focus:ring-sky-500 focus:border-sky-500">
         </div>
         <div>
